# pybt

./: .gitignore  AGENTS.md  README.md  agent.zh-cn.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
api/: main.py  schemas.py
apps/: __init__.py
backend/: Dockerfile  __init__.py  app.py  logging_config.py  requirements.txt  uvicorn_debug.py
configs/: example_multi.json  example_single.json  example_weighted.json
data/: AAPL.csv  MSFT.csv  SPY_sample.csv
docs/: architecture_and_functionality.md  detailed_reporter_analysis.md
examples/: README.md  adata_backtest.py  adata_multi_stock.py  detailed_report_demo.py  realtime_monitor.py  simple_backtest.py
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
out_breakout/: equity.csv  metrics.json  trades.csv
out_multi/: metrics.json  trades.csv
out_multi2/: equity.csv
out_multi_cfg/: equity.csv  metrics.json
out_single/: equity.csv
out_single_cfg/: metrics.json  trades.csv
out_weighted/: equity.csv  metrics.json
out_weighted2/: equity.csv  metrics.json  trades.csv
out_weighted_cfg/: equity.csv  metrics.json  trades.csv
pybt/: README.md  __init__.py  (+11 more)
stock-mcp/: OPENCODE_CONFIG.md  OPENCODE_SETUP.md  QUICKSTART.md  README.md  README_UPDATE_SUMMARY.md  USAGE.md  VERIFICATION_SUMMARY.md  demo.py  install.py  mcp_config_opencode.json  pyproject.toml  run_server.py  server.py  test_all_tools.py  test_installation.py  test_results.json  test_server.py
stock-mcp/stock_mcp/: __init__.py  analyzer.py  cache.py  config.py  fetcher.py  tools.py
(+196 files in other folders)
