[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pybt"
version = "0.1.0"
description = "Modular event-driven backtesting framework"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "mypy>=1.0.0",
    "pytest-cov>=4.0.0",
]
data = [
    "pandas>=1.5.0",
]
realtime = [
    "adata",
    "requests>=2.28.0",
    "websockets>=11.0.0",
]
server = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.0.0",
    "websockets>=11.0.0",
]
app = [
    "python-telegram-bot>=21.0",
    "httpx>=0.27.0",
    "websockets>=11.0.0",
]

[tool.setuptools.packages.find]
include = ["pybt*"]
exclude = ["tests*", "third_party*"]

[tool.black]
line-length = 88
extend-exclude = "third_party"

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
warn_return_any = true

[[tool.mypy.overrides]]
module = "third_party.*"
ignore_errors = true
