[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stock-mcp"
version = "0.1.0"
description = "MCP server for Chinese A-share stock data analysis using AKShare"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "akshare>=1.18.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "httpx>=0.27.0",
]

[project.scripts]
stock-mcp = "stock_mcp.server:main"

[tool.uv]
dev-dependencies = []
